// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form input test Component set to textbox with little popup bubble 1`] = `
<div
  className="stgNoticable"
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": "0.2rem 1rem",
      }
    }
  >
    <label
      className="dataLabelMarking"
      htmlFor="unameLabelBound"
    >
      Username area
    </label>
    <input
      id="unameLabelBound"
      name="username"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyPress={[MockFunction]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "width": "45%",
        }
      }
      type="textbox"
      value="stg"
    />
  </div>
  <span
    transitionentertimeout={500}
    transitionleavetimeout={500}
  />
</div>
`;

exports[`Form input test Component set to textbox without popup bubble 1`] = `
<div
  className="stgNoticable"
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": "0.2rem 1rem",
      }
    }
  >
    <label
      className="dataLabelMarking"
      htmlFor="unameLabelBound"
    >
      Username area
    </label>
    <input
      id="unameLabelBound"
      name="username"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyPress={[MockFunction]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "width": "45%",
        }
      }
      type="text"
      value="stg"
    />
  </div>
  <span
    transitionentertimeout={500}
    transitionleavetimeout={500}
  />
</div>
`;
